adicionado materialize-css

--- a/css/materialize-css/materialize.css
+++ b/css/materialize-css/materialize.css
@@ -8091,8 +8091,5 @@ input[type=range]::-ms-thumb {
     margin-top: 1.2rem;
   }
 }
-body {
-  background-color: red;
-}
 
-/*# sourceMappingURL=layout.css.map */
+/*# sourceMappingURL=materialize.css.map */
