--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -1,2 +1,7 @@
 @import "materialize-css/materialize.scss";
 
+.site-content{
+    width: 1024px;
+    height: 768px;
+    border: thin black solid;
+}
