--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -1,31 +1,185 @@
 @import "materialize-css/materialize.scss";
-
-
-@font-face {
-    src: "fonts/angelia/Angelia.otf";
-    font-family: "angelia";
+@import url('https://fonts.googleapis.com/css2?family=Arizonia&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap');
+html {
+    font-size: 16px;
 }
 
-@font-face {
-    src: "fonts/coldiac/Coldiac.otf";
-    font-family: "coldiac";
+.main {
+    min-height: 100vh;
 }
 
-.site-content{
-    width: 64rem;
-    height: 200rem;
+.logo-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 10rem;
+    margin-top: 2rem;
+}
+
+.nome,
+.atividade {
+    z-index: 10;
+}
+
+.top-header-left-col {
+    position: relative;
+    height: 30rem;
+}
+
+.border-black {
     border: thin black solid;
 }
 
-.top-header{
-    height: 40rem;
+.border-purple {
+    border: thin #be4a6c solid;
+}
+
+.top-header-right-col {
+    position: relative;
+    height: 30rem;
+}
+
+.top-header-social-icons {
+    margin: 0;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.top-header-social-icons img {
+    width: 2rem;
+    margin-left: 0.5rem;
+    z-index: 10;
+    cursor: pointer;
+}
+
+.top-header-social-icons img:last-child {
+    margin-right: 0.5rem;
+}
+
+.top-header-petalas {
+    width: 100%;
+    position: absolute;
+    margin: 0;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.top-header-message {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    font-family: sans-serif;
+    width: 20rem;
+    margin: 0;
+    padding: 0;
+    line-height: 2.5rem;
+}
+
+.top-header-message p {
+    font-size: 2rem;
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+.top-header-message p:last-of-type {
+    color: #be4a6c;
+    font-size: 4rem;
+}
+
+.top-header-message .aspas {
+    position: absolute;
+    width: 20%;
+    top: -10%;
+    right: -10%;
+}
+
+.top-header-message .actions {
+    margin-top: 1rem;
+    text-align: left;
+}
+
+.top-header-shape-right {
+    width: 75%;
+    position: absolute;
+    margin: 0;
+    top: 0;
+    right: 0;
+    z-index: 1;
+}
+
+.top-header-buque-caixa {
+    width: 80%;
+    position: absolute;
+    margin: 0;
+    top: 6rem;
+    right: 4rem;
+    z-index: 2;
+}
+
+.top-header-buque-flores {
+    width: 80%;
+    position: absolute;
+    margin: 0;
+    top: 6rem;
+    right: 8rem;
+}
+
+.top-header-caixa-guloseimas {
+    width: 50%;
+    position: absolute;
+    margin: 0;
+    top: 20rem;
+    right: 10rem;
+}
+
+.logo-text p {
+    margin: 0;
+    padding: 0;
+}
+
+.logo-text .nome {
+    font-family: 'Mrs Saint Delafield', cursive;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.logo-text .atividade {
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+    font-size: 0.7rem;
+    margin-top: -0.5rem;
+}
+
+.atividade::before {
+    content: "___";
+    letter-spacing: 0;
+    color: black;
+    position: relative;
+    top: -0.4rem;
+    right: 0.2rem;
+    text-align: center
+}
+
+.atividade:after {
+    content: "___";
+    letter-spacing: 0;
+    position: relative;
+    top: -0.4rem;
+    left: 0.2rem;
+    color: black;
+    text-align: center
+}
+
+.site-content {
     border: thin black solid;
 }
 
-.logo{
-    width: 10%;
-}
-
-.top-header-flores{
-   width: 10%;
+.top-header {
+    border: thin black solid;
 }
