--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -183,3 +183,38 @@ html {
 .top-header {
     border: thin black solid;
 }
+
+// CELEBRAÇÕES
+.celebracoes {
+    margin-top: 0;
+    margin: 0;
+    padding: 0;
+    line-height: normal;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.celebracoes p:first-child {
+    font-weight: bold;
+}
+
+.cards-group {}
+
+.cards-group .linha {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+.cards-group .card-celebracao {
+    width: 9rem;
+    height: 12rem;
+    border: thin black solid;
+    border-radius: 1rem;
+    margin-right: 1rem;
+    margin-left: 1rem;
+}
+
+.card-celebracao img {
+    width: 100%;
+}
